crates/lang/macro/tests/ui/fail/M-01-missing-message.rs
use pro_lang as pro;

#[pro::contract]
mod missing_message {
    #[pro(storage)]
    pub struct MissingMessage {}

    impl MissingMessage {
        #[pro(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }
    }
}

fn main() {}
