crates/lang/macro/tests/ui/fail/M-01-missing-message.stderr
error: missing pro! message
  --> $DIR/M-01-missing-message.rs:4:1
   |
4  | / mod missing_message {
5  | |     #[pro(storage)]
6  | |     pub struct MissingMessage {}
7  | |
...  |
13 | |     }
14 | | }
   | |_^
